src/app.scss
$mdc-theme-primary: #3F51B5; // Primary colour
$mdc-theme-secondary: #f44336; // Secondary colour
$mdc-theme-background: #5C6BC0; // Background colour
@import "@material/button/mdc-button"; // MDC button base styles
@import "@material/card/mdc-card"; // MDC card base styles
@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500"); // Roboto font
@import "@material/typography/mdc-typography"; // MDC typography base styles
@import "@material/icon-button/mdc-icon-button"; // MDC icon button styles
@import "@material/top-app-bar/mdc-top-app-bar"; // MDC top app bar base styles
@import "@material/drawer/mdc-drawer"; // MDC drawer base styles
@import "@material/list/mdc-list"; // MDC list base styles
@import "@material/layout-grid/mdc-layout-grid"; // MDC layout grid base styles

body {
    // Document body
    background: #5C6BC0;
    display: flex;
    margin: 0;
    min-height: 100vh;
    position: relative;
    top: 0 !important;
}

#main-content {
    // Document main
    min-width: 100%;
    overflow: auto;
}

#mdc-drawer-app-content {
    // Content of app drawer
    flex: auto;
}

#content-grid {
    // The grid of cards
    margin: auto;
    max-width: 1250px;
}

.content-card .mdc-card__primary-action {
    // The main text area of a card
    padding: 1rem;
}

.content-card .mdc-card__primary-action .mdc-card__title {
    // The title area of a card
    margin: 0;
}

.content-card .mdc-card__actions .mdc-card__action-buttons .mdc-button {
    // The buttons inside of the cards
    @include mdc-button-ink-color(red);
    @include mdc-states(red);
}

.content-card > .mdc-card__primary-action > p {
    // The main text of the cards
    margin: 0;
}

#gravatar-icon {
    // The profile image
    border-radius: 50%;
    position: absolute;
    right: 40px;
    top: 30px;
    z-index: 999;
}

@media (max-width: 400px) {
    // Screen size 400px or smaller
    #gravatar-icon {
        // The profile image
        display: none;
    }
}

.goog-te-banner-frame.skiptranslate {
    // Google Translate banner
    display: none !important;
}

.goog-logo-link {
    // Google Translate logo
    display: none !important;
}

.goog-te-gadget {
    // Google Translate widget
    color: transparent !important;
    font-family: "Roboto", sans-serif;
    padding-left: 15px;
    padding-top: 15px;
}

.goog-te-spinner-pos {
    // Google Translate spinner object in footer
    display: none;
}
@import "node_modules/normalize.css/normalize.css"; // Normalise CSS - A CSS reset

